# polymarket-bot-1

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_single_cycle.py  web_app.py
app/: bootstrap.py
app/actions/: action_model.py
app/analytics/: analytics_orchestrator.py  base_module.py  module_types.py  output_schema.py
app/config/: loader.py  merger.py  profile_manager.py  runtime_config.py  target_markets.py  validator.py
app/controller/: command_handler.py  command_model.py  controller.py  fault_policy.py  lifecycle_state.py
app/decision/: aggregate_decision.py  confidence_layer.py  decision_schema.py  gate_layer.py  response_mode.py
app/execution/: execution_schema.py  executor.py  fake_real_executor.py  paper_executor.py  real_executor.py
app/market/: monitor.py
app/observability/: command_logger.py  cycle_logger.py  event_logger.py  execution_logger.py  performance_stats.py  signal_logger.py  status_model.py  status_service.py
app/orchestration/: cycle_outcome.py  orchestrator.py
app/positions/: position_model.py  position_service.py  position_store.py
app/risk/: capital_risk_check.py  exposure_policy.py  risk_schema.py
app/shared/: enums.py  exceptions.py  ids.py  time_utils.py
app/sizing/: size_recommender.py  sizing_policy.py  sizing_schema.py
app/state/: state_builder.py  state_schema.py  state_snapshot.py
config/: core.yaml
config/profiles/: default.yaml  (+3 more)
tests/: test_execution_routing.py  test_lifecycle_commands.py  test_real_mode.py  test_risk_sizing.py  test_smoke_cycle.py  test_web_ui.py
(+19 files in other folders)
